# Pokemon-Optimizer

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  railway.json  requirements.txt  vercel.json
api/: main.py
data/: event_pokemon.json  fetch_pokeapi.py  pokemon.json  type_chart.json
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/AnalysisPanel/: StatRadar.tsx  TypeCoverage.tsx
frontend/src/components/ConfigPanel/: AnchorPicker.tsx  GenerationSelector.tsx  PlayStyleSelector.tsx
frontend/src/components/ResultsPanel/: TeamDisplay.tsx
frontend/src/components/shared/: Tooltip.tsx  TypeBadge.tsx
frontend/src/hooks/: useOptimizer.ts
frontend/src/types/: index.ts
frontend/src/utils/: typeUtils.ts
optimizer/: constraints.py  ga_solver.py  greedy_solver.py  ilp_solver.py  models.py  scoring.py
tests/: test_scoring.py
